--- a/blog.html
+++ b/blog.html
@@ -1,114 +1,91 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
-    <link rel="stylesheet" href="assets/style.css" />
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Bati-Duoc</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Bati-Duoc | Blog</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <!-- NAVBAR estilo wireframe -->
-    <nav class="navbar navbar-expand-lg bg-light border-bottom">
-        <div class="container-fluid">
-            <a class="navbar-brand fw-bold" href="#">Bati-Duoc</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Productos</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Nosotros</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Blog</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
-                </ul>
-                <div class="d-flex">
-                    <div class="nav-item dropdown me-3">
-                        <a class="nav-link" href="index2.html">Iniciar sesión</a>
-                    </div>
-                    <div class="nav-item dropdown me-3">
-                        <a class="nav-link active" href="index3.html">Registrar usuario</a>
-                    </div>
-                    <div class="nav-item dropdown me-3">
-                        <a class="nav-link position-relative" href="#">
-                            <i class="bi bi-cart"></i> Cart (0)
-                        </a>
-                    </div>
-                </div>
-            </div>
+  <!-- NAVBAR -->
+  <nav class="navbar navbar-expand-lg bg-light border-bottom">
+    <div class="container-fluid">
+      <a class="navbar-brand fw-bold" href="index.html">Bati-Duoc</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+        data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+        aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="productoPag.html">Productos</a></li>
+          <li class="nav-item"><a class="nav-link" href="Nosotros.html">Nosotros</a></li>
+          <li class="nav-item"><a class="nav-link active" href="blog.html">Blog</a></li>
+          <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
+        </ul>
+        <div class="d-flex">
+          <div class="nav-item dropdown me-3">
+            <a class="nav-link" href="index2.html">Iniciar sesión</a>
+          </div>
+          <div class="nav-item dropdown me-3">
+            <a class="nav-link" href="index3.html">Registrar usuario</a>
+          </div>
+          <div class="nav-item dropdown me-3">
+            <a class="nav-link position-relative" href="#">
+              <i class="bi bi-cart"></i> Cart (0)
+            </a>
+          </div>
         </div>
-    </nav>
+      </div>
+    </div>
+  </nav>
 
-    <!-- NOTICIAS IMPORTANTES -->
-    <div class="container my-5">
-        <h2 class="text-center fw-bold mb-5">NOTICIAS IMPORTANTES</h2>
-        
-        <!-- Caso Curioso #1 -->
-        <div class="row bg-light rounded-3 align-items-center mb-4 p-4">
-            <div class="col-md-6">
-                <h3 class="fw-bold">CASO CURIOSO #1</h3>
-                <p class="mb-4">
-                    Our North American Field Guides provide tips for identifying birds in all of the regions of the
-                    United States and Canada. Download any of our guides for free now!
-                </p>
-                <button class="btn btn-outline-dark px-4 py-2 mb-2">VER CASO</button>
-            </div>
-            <div class="col-md-6 text-center">
-                <img src="https://via.placeholder.com/500x300?text=Imagen+Caso+1" class="img-fluid rounded border"
-                    alt="Caso Curioso 1">
-            </div>
-        </div>
-        <!-- Caso Curioso #2 -->
-        <div class="row bg-light rounded-3 align-items-center mb-4 p-4">
-            <div class="col-md-6">
-                <h3 class="fw-bold">CASO CURIOSO #2</h3>
-                <p class="mb-4">
-                    Our North American Field Guides provide tips for identifying birds in all of the regions of the
-                    United States and Canada. Download any of our guides for free now!
-                </p>
-                <button class="btn btn-outline-dark px-4 py-2 mb-2">VER CASO</button>
-            </div>
-            <div class="col-md-6 text-center">
-                <img src="https://via.placeholder.com/500x300?text=Imagen+Caso+2" class="img-fluid rounded border"
-                    alt="Caso Curioso 2">
-            </div>
-        </div>
+  <!-- CONTENIDO PRINCIPAL -->
+  <div class="container my-5">
+    <h2 class="fw-bold text-center mb-5">NOTICIAS IMPORTANTES</h2>
+
+    <!-- Caso Curioso #1 - Batipalta -->
+    <div class="row bg-light rounded-3 align-items-center mb-4 p-4">
+      <div class="col-md-6">
+        <h3 class="fw-bold">CASO CURIOSO #1 – Batipalta</h3>
+        <p class="mb-4">
+          Descubre cómo el Batipalta sorprendió a nuestros clientes con su mezcla cremosa de
+          aguacate, kiwi, mango y naranja. Una experiencia exótica que refresca y energiza.
+        </p>
+        <a href="caso1.html" class="btn btn-outline-dark px-4 py-2 mb-2">VER CASO</a>
+      </div>
+      <div class="col-md-6 text-center">
+        <img src="images/imagenes_experiencias/EXPERIENCIA BATIPALTA.png" class="img-fluid rounded border" alt="Caso Batipalta">
+      </div>
     </div>
 
+    <!-- Caso Curioso #2 - Baticol -->
+    <div class="row bg-light rounded-3 align-items-center mb-4 p-4">
+      <div class="col-md-6">
+        <h3 class="fw-bold">CASO CURIOSO #2 – Baticol</h3>
+        <p class="mb-4">
+          Conoce la experiencia única del Baticol, el batido verde definitivo con kale, manzana,
+          aguacate y lima. Nutrición, frescura y energía natural en cada sorbo.
+        </p>
+        <a href="caso2.html" class="btn btn-outline-dark px-4 py-2 mb-2">VER CASO</a>
+      </div>
+      <div class="col-md-6 text-center">
+        <img src="images/imagenes_experiencias/Experiencia Bati-col.png" class="img-fluid rounded border" alt="Caso Baticol">
+      </div>
+    </div>
+  </div>
 
-    <!-- FOOTER BASE -->
-    <footer class="bg-light border-top py-4 mt-5">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-md-4 mb-2 mb-md-0">
-                    <span class="fw-bold">Bati-Duoc</span>
-                </div>
-                <div class="col-md-4 mb-2 mb-md-0 text-center">
-                    <img src="https://img.icons8.com/color/96/visa.png" alt="Visa" style="width:40px; height:auto;" />
-                    <img src="https://img.icons8.com/color/96/mastercard.png" alt="MasterCard"
-                        style="width:40px; height:auto;" />
-                    <img src="https://img.icons8.com/color/96/paypal.png" alt="PayPal"
-                        style="width:40px; height:auto;" />
-                </div>
-                <div class="col-md-4 text-end">
-                    <form class="d-flex justify-content-end">
-                        <input type="email" class="form-control form-control-sm w-auto me-2" placeholder="Enter Email">
-                        <button class="btn btn-dark btn-sm">Suscribirse</button>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </footer>
-    <section class="bg-light py-4 border-top">
-        <div class="container text-center">
-            <p class="mb-1">&copy; 2024 Bati-Duoc. Todos los derechos reservados.</p>
-        </div>
-    </section>
+  <!-- FOOTER -->
+  <footer class="bg-light border-top py-4 mt-5">
+    <div class="container text-center">
+      <p class="mb-1">&copy; 2024 Bati-Duoc. Todos los derechos reservados.</p>
+    </div>
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
