--- a/productoPag.html
+++ b/productoPag.html
@@ -6,14 +6,11 @@
   <link rel="icon" type="image/x-icon" href="images/Bati-Duoc.png">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Bati-Duoc | Producto</title>
-  <!-- Bootstrap 5 CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <!-- CSS propio -->
   <link rel="stylesheet" href="styles.css" />
 </head>
 
 <body>
-  <!-- NAVBAR (igual al index) -->
   <nav class="navbar navbar-expand-lg bg-light border-bottom">
     <div class="container-fluid">
       <a class="nav-link fw-bold" href="index.html">Bati-Duoc</a>
@@ -36,7 +33,7 @@
           </div>
           <div class="nav-item dropdown me-3">
             <a class="nav-link" href="index3.html">Registrar usuario</a>
-          </div>
+  a        </div>
           <div class="nav-item dropdown me-3">
             <a class="nav-link position-relative" href="#">
               <i class="bi bi-cart"></i> Cart (0)
@@ -47,31 +44,30 @@
     </div>
   </nav>
 
-  <!-- CONTENIDO PRODUCTO -->
   <main class="container my-4">
     <nav class="mb-3" aria-label="breadcrumb">
       <ol class="breadcrumb small">
         <li class="breadcrumb-item"><a href="index.html">Home</a></li>
         <li class="breadcrumb-item"><a href="productoPag.html">Batidos</a></li>
-        <li class="breadcrumb-item active" aria-current="page">Frutos Rojos</li>
+        <li class="breadcrumb-item active" aria-current="page" id="breadcrumb-product-name">Frutos Rojos</li>
       </ol>
     </nav>
 
     <div class="row">
       <div class="col-md-7">
         <div class="product-images border p-2">
-          <img src="images/batidoFrutosRojo.webp" class="d-block w-100" alt="Batido Frutos Rojos">
+          <img id="main-product-img" src="images/batidoFrutosRojo.webp" class="d-block w-100" alt="Batido Frutos Rojos">
         </div>
       </div>
 
       <div class="col-md-5">
         <div class="product-info">
           <div class="d-flex justify-content-between align-items-center mb-3">
-            <h2 class="product-name">Batido de Frutos Rojos</h2>
-            <span class="product-price fs-4 fw-bold">$8.990</span>
+            <h2 class="product-name" id="main-product-name">Batido de Frutos Rojos</h2>
+            <span class="product-price fs-4 fw-bold" id="main-product-price">$8.990</span>
           </div>
           <hr />
-          <p class="product-description small text-justify">
+          <p class="product-description small text-justify" id="main-product-description">
             Un batido refrescante elaborado con frutos rojos seleccionados que aportan antioxidantes,
             energía ligera y un sabor único. Perfecto para revitalizar tus mañanas y tardes.
           </p>
@@ -84,7 +80,7 @@
               <option>4</option>
               <option>5</option>
             </select>
-            <button type="submit" class="btn btn-primary w-100">Añadir al carrito</button>
+            <button type="submit" class="btn btn-primary w-100" id="add-to-cart-btn">Añadir al carrito</button>
           </form>
         </div>
       </div>
@@ -92,29 +88,35 @@
 
     <hr class="my-4" />
 
-    <!-- PRODUCTOS RELACIONADOS -->
     <section class="related-products">
       <h6 class="mb-3">Batidos Relacionados</h6>
       <div class="d-flex gap-3 overflow-auto">
-        <a href="#" class="related-item"><img src="images/Imagenes_Batidos/Avocado smoothie.png" alt="Batido Verde" class="img-fluid"></a>
-        <a href="#" class="related-item"><img src="images/Imagenes_Batidos/Banana smoothie with peanut butter.png" alt="Batido Limón Jengibre" class="img-fluid"></a>
-        <a href="#" class="related-item"><img src="images/Imagenes_Batidos/Berry smoothie.png" alt="Batido divertido" class="img-fluid"></a>
-        <a href="#" class="related-item"><img src="images/Imagenes_Batidos/Kiwi fruit smoothie.png" alt="Batido de Vainilla" class="img-fluid"></a>
-        <a href="#" class="related-item"><img src="images/Imagenes_Batidos/Protein smoothie.png" alt="Batido de Mango" class="img-fluid"></a>
+        <a href="#" class="related-item" data-product-id="avocado" data-product-img="images/Imagenes_Batidos/Avocado smoothie.png">
+          <img src="images/Imagenes_Batidos/Avocado smoothie.png" alt="Batido de Palta" class="img-fluid">
+        </a>
+        <a href="#" class="related-item" data-product-id="banana-peanut" data-product-img="images/Imagenes_Batidos/Banana smoothie with peanut butter.png">
+          <img src="images/Imagenes_Batidos/Banana smoothie with peanut butter.png" alt="Batido de Plátano y Maní" class="img-fluid">
+        </a>
+        <a href="#" class="related-item" data-product-id="berry" data-product-img="images/Imagenes_Batidos/Berry smoothie.png">
+          <img src="images/Imagenes_Batidos/Berry smoothie.png" alt="Batido de Frutos Rojos" class="img-fluid">
+        </a>
+        <a href="#" class="related-item" data-product-id="kiwi" data-product-img="images/Imagenes_Batidos/Kiwi fruit smoothie.png">
+          <img src="images/Imagenes_Batidos/Kiwi fruit smoothie.png" alt="Batido de Kiwi" class="img-fluid">
+        </a>
+        <a href="#" class="related-item" data-product-id="protein" data-product-img="images/Imagenes_Batidos/Protein smoothie.png">
+          <img src="images/Imagenes_Batidos/Protein smoothie.png" alt="Batido de Proteína" class="img-fluid">
+        </a>
       </div>
     </section>
   </main>
 
-  <!-- FOOTER -->
   <footer class="bg-light border-top py-4 mt-5">
     <div class="container text-center">
       <p class="mb-1">&copy; 2025 Bati-Duoc. Todos los derechos reservados.</p>
     </div>
   </footer>
 
-  <!-- Bootstrap 5 JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <!-- JS personalizado -->
   <script src="productos.js"></script>
 </body>
 </html>
