--- a/Nosotros.html
+++ b/Nosotros.html
@@ -27,6 +27,19 @@
           <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
           <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
         </ul>
+        <div class="d-flex">
+          <div class="nav-item dropdown me-3">
+            <a class="nav-link" href="index2.html">Iniciar sesión</a>
+          </div>
+          <div class="nav-item dropdown me-3">
+            <a class="nav-link" href="index3.html">Registrar usuario</a>
+          </div>
+          <div class="nav-item dropdown me-3">
+            <a class="nav-link position-relative" href="#">
+              <i class="bi bi-cart"></i> Cart (0)
+            </a>
+          </div>
+        </div>
       </div>
     </div>
   </nav>
