--- a/caso1.html
+++ b/caso1.html
@@ -10,11 +10,16 @@
 </head>
 
 <body>
-  <!-- NAVBAR -->
+   <!-- NAVBAR -->
   <nav class="navbar navbar-expand-lg bg-light border-bottom">
     <div class="container-fluid">
       <a class="navbar-brand fw-bold" href="index.html">Bati-Duoc</a>
-      <div class="collapse navbar-collapse">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+        data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+        aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="productoPag.html">Productos</a></li>
@@ -22,6 +27,19 @@
           <li class="nav-item"><a class="nav-link active" href="blog.html">Blog</a></li>
           <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
         </ul>
+        <div class="d-flex">
+          <div class="nav-item dropdown me-3">
+            <a class="nav-link" href="index2.html">Iniciar sesión</a>
+          </div>
+          <div class="nav-item dropdown me-3">
+            <a class="nav-link" href="index3.html">Registrar usuario</a>
+          </div>
+          <div class="nav-item dropdown me-3">
+            <a class="nav-link position-relative" href="#">
+              <i class="bi bi-cart"></i> Cart (0)
+            </a>
+          </div>
+        </div>
       </div>
     </div>
   </nav>
