--- a/Nosotros.html
+++ b/Nosotros.html
@@ -14,9 +14,8 @@
   <nav class="navbar navbar-expand-lg bg-light border-bottom">
     <div class="container-fluid">
       <a class="navbar-brand fw-bold" href="index.html">Bati-Duoc</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-        data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-        aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
@@ -35,7 +34,7 @@
             <a class="nav-link" href="index3.html">Registrar usuario</a>
           </div>
           <div class="nav-item dropdown me-3">
-            <a class="nav-link position-relative" href="#">
+            <a class="nav-link position-relative" href="carrito.html">
               <i class="bi bi-cart"></i> Cart (0)
             </a>
           </div>
@@ -63,9 +62,7 @@
           </p>
         </div>
         <div class="col-md-6 text-center">
-          <img src="images/imagenes_experiencias/Equipo.png"
-               class="img-fluid rounded shadow"
-               alt="Equipo Bati-Duoc">
+          <img src="images/imagenes_experiencias/Equipo.png" class="img-fluid rounded shadow" alt="Equipo Bati-Duoc">
         </div>
       </div>
     </div>
@@ -123,5 +120,19 @@
     </div>
   </footer>
 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="productos.js"></script>
+  <script>
+    document.addEventListener('DOMContentLoaded', () => {
+      const cart = JSON.parse(localStorage.getItem('cart')) || [];
+      // Suma la cantidad total de unidades
+      const totalUnits = cart.reduce((sum, item) => sum + item.quantity, 0);
+      const cartCountElement = document.querySelector('.nav-link .bi-cart').nextSibling;
+      if (cartCountElement) {
+        cartCountElement.textContent = ` Cart (${totalUnits})`;
+      }
+    });
+  </script>
 </body>
+
 </html>
