--- a/caso1.html
+++ b/caso1.html
@@ -35,7 +35,7 @@
             <a class="nav-link" href="index3.html">Registrar usuario</a>
           </div>
           <div class="nav-item dropdown me-3">
-            <a class="nav-link position-relative" href="#">
+            <a class="nav-link position-relative" href="carrito.html">
               <i class="bi bi-cart"></i> Cart (0)
             </a>
           </div>
@@ -83,5 +83,17 @@
       <p class="mb-1">&copy; 2024 Bati-Duoc. Todos los derechos reservados.</p>
     </div>
   </footer>
+
+  <script>
+  document.addEventListener('DOMContentLoaded', () => {
+    const cart = JSON.parse(localStorage.getItem('cart')) || [];
+    // Suma la cantidad total de unidades
+    const totalUnits = cart.reduce((sum, item) => sum + item.quantity, 0);
+    const cartCountElement = document.querySelector('.nav-link .bi-cart').nextSibling;
+    if (cartCountElement) {
+      cartCountElement.textContent = ` Cart (${totalUnits})`;
+    }
+  });
+</script>
 </body>
 </html>
