--- a/index2.html
+++ b/index2.html
@@ -34,7 +34,7 @@
             <a class="nav-link active" href="index3.html">Registrar usuario</a>
           </div>
           <div class="nav-item dropdown me-3">
-            <a class="nav-link position-relative" href="#">
+            <a class="nav-link position-relative" href="carrito.html">
               <i class="bi bi-cart"></i> Cart (0)
             </a>
           </div>
@@ -126,5 +126,16 @@
         </div>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+  document.addEventListener('DOMContentLoaded', () => {
+    const cart = JSON.parse(localStorage.getItem('cart')) || [];
+    // Suma la cantidad total de unidades
+    const totalUnits = cart.reduce((sum, item) => sum + item.quantity, 0);
+    const cartCountElement = document.querySelector('.nav-link .bi-cart').nextSibling;
+    if (cartCountElement) {
+      cartCountElement.textContent = ` Cart (${totalUnits})`;
+    }
+  });
+</script>
 </body>
 </html>
