--- a/index3.html
+++ b/index3.html
@@ -8,40 +8,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
+
 <body>
-     <!-- NAVBAR -->
-  <nav class="navbar navbar-expand-lg bg-light border-bottom">
-    <div class="container-fluid">
-      <a class="navbar-brand fw-bold" href="index.html">Bati-Duoc</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-        data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-        aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="productoPag.html">Productos</a></li>
-          <li class="nav-item"><a class="nav-link" href="Nosotros.html">Nosotros</a></li>
-          <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
-          <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
-        </ul>
-        <div class="d-flex">
-          <div class="nav-item dropdown me-3">
-            <a class="nav-link active" href="index2.html">Iniciar sesión</a>
-          </div>
-          <div class="nav-item dropdown me-3">
-            <a class="nav-link" href="index3.html">Registrar usuario</a>
-          </div>
-          <div class="nav-item dropdown me-3">
-            <a class="nav-link position-relative" href="#">
-              <i class="bi bi-cart"></i> Cart (0)
-            </a>
-          </div>
+    <!-- NAVBAR -->
+    <nav class="navbar navbar-expand-lg bg-light border-bottom">
+        <div class="container-fluid">
+            <a class="navbar-brand fw-bold" href="index.html">Bati-Duoc</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="productoPag.html">Productos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="Nosotros.html">Nosotros</a></li>
+                    <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
+                </ul>
+                <div class="d-flex">
+                    <div class="nav-item dropdown me-3">
+                        <a class="nav-link active" href="index2.html">Iniciar sesión</a>
+                    </div>
+                    <div class="nav-item dropdown me-3">
+                        <a class="nav-link" href="index3.html">Registrar usuario</a>
+                    </div>
+                    <div class="nav-item dropdown me-3">
+                        <a class="nav-link position-relative" href="carrito.html">
+                            <i class="bi bi-cart"></i> Cart (0)
+                        </a>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
-  </nav>
+    </nav>
 
     <!-- Registro de usuario -->
     <div class="container py-5">
@@ -105,6 +105,17 @@
         </div>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+      document.addEventListener('DOMContentLoaded', () => {
+        const cart = JSON.parse(localStorage.getItem('cart')) || [];
+        // Suma la cantidad total de unidades
+        const totalUnits = cart.reduce((sum, item) => sum + item.quantity, 0);
+        const cartCountElement = document.querySelector('.nav-link .bi-cart').nextSibling;
+        if (cartCountElement) {
+          cartCountElement.textContent = ` Cart (${totalUnits})`;
+        }
+      });
+    </script>
 </body>
 
 </html>
