Error Corregido en Carrito con Imagenes

--- a/index3.html
+++ b/index3.html
@@ -48,22 +48,26 @@
         <div class="card shadow-sm" >
             <div class="card-header bg-light fw-bold">Registro de usuario</div>
             <div class="card-body">
-                <form>
+                <form id="registroForm">
                     <div class="mb-3">
                         <label for="nombre" class="form-label">Nombre completo</label>
-                        <input type="text" class="form-control" id="nombre" required>
+                        <input type="text" class="form-control" id="nombre" maxlength="100" required>
+                        <div class="invalid-feedback">El nombre no puede exceder los 100 caracteres.</div>
                     </div>
                     <div class="mb-3">
-                        <label for="correo" class="form-label">Correo</label>
-                        <input type="email" class="form-control" id="correo" required>
+                        <label for="email" class="form-label">Correo</label>
+                        <input type="email" class="form-control" id="email" required>
+                        <div class="invalid-feedback">El correo es inválido.</div>
                     </div>
                     <div class="mb-3">
                         <label for="password" class="form-label">Contraseña</label>
                         <input type="password" class="form-control" id="password" required>
+                        <div class="invalid-feedback"></div>
                     </div>
                     <div class="mb-3">
                         <label for="confirmar" class="form-label">Confirmar contraseña</label>
                         <input type="password" class="form-control" id="confirmar" required>
+                        <div class="invalid-feedback"></div>
                     </div>
                     <div class="mb-3">
                         <label for="telefono" class="form-label">Teléfono (opcional)</label>
@@ -135,7 +139,9 @@
     if (cartCountElement) {
       cartCountElement.textContent = ` Cart (${totalUnits})`;
     }
+ 
   });
+  
 </script>
 </body>
 </html>
