--- a/index2.html
+++ b/index2.html
@@ -14,6 +14,7 @@
     <nav class="navbar navbar-expand-lg bg-light border-bottom">
         <div class="container-fluid">
             <a class="navbar-brand fw-bold" href="index.html">Bati-Duoc</a>
+            
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -48,8 +49,8 @@
         <div class="row justify-content-center">
             <div class="col-md-8 text-center mb-4">
                 <div class="mx-auto mb-3"
-                    style="width:120px;height:120px;border:2px solid #333;display:flex;align-items:center;justify-content:center;">
-                    <a href="images"></a>
+                    style="width:140px;height:140px;border:2px solid #333;display:flex;align-items:center;justify-content:center;">
+                    <img src="images/batiduocHD.png" alt="Logo Bati-Duoc" class="img-fluid">
                 </div>
                 <h1 class="fw-bold mb-4">Bati-Duoc</h1>
             </div>
@@ -116,6 +117,8 @@
         }
       });
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 
 </html>
