--- a/index3.html
+++ b/index3.html
@@ -139,7 +139,66 @@
     if (cartCountElement) {
       cartCountElement.textContent = ` Cart (${totalUnits})`;
     }
- 
+
+    // Validación de registro (correo y contraseña)
+    const registroForm = document.getElementById('registroForm');
+    if (registroForm) {
+      registroForm.addEventListener('submit', function(e) {
+        let valid = true;
+
+        // Correo
+        const emailInput = document.getElementById('email');
+        const emailFeedback = emailInput.nextElementSibling;
+        const correo = emailInput.value.trim();
+        const correoRegex = /^[^@\s]{1,}@((duoc\.cl)|(profesor\.duoc\.cl)|(gmail\.com))$/i;
+        emailInput.classList.remove('is-invalid');
+        emailFeedback.textContent = '';
+        if (!correo) {
+          emailInput.classList.add('is-invalid');
+          emailFeedback.textContent = 'El correo es requerido.';
+          valid = false;
+        } else if (correo.length > 100) {
+          emailInput.classList.add('is-invalid');
+          emailFeedback.textContent = 'El correo no puede exceder los 100 caracteres.';
+          valid = false;
+        } else if (!correoRegex.test(correo)) {
+          emailInput.classList.add('is-invalid');
+          emailFeedback.textContent = 'Solo se permiten correos @duoc.cl, @profesor.duoc.cl o @gmail.com.';
+          valid = false;
+        }
+
+        // Contraseña
+        const passwordInput = document.getElementById('password');
+        const passwordFeedback = passwordInput.nextElementSibling;
+        const password = passwordInput.value;
+        passwordInput.classList.remove('is-invalid');
+        passwordFeedback.textContent = '';
+        if (!password) {
+          passwordInput.classList.add('is-invalid');
+          passwordFeedback.textContent = 'La contraseña es requerida.';
+          valid = false;
+        } else if (password.length < 4 || password.length > 10) {
+          passwordInput.classList.add('is-invalid');
+          passwordFeedback.textContent = 'La contraseña debe tener entre 4 y 10 caracteres.';
+          valid = false;
+        }
+
+        // Confirmar contraseña
+        const confirmarInput = document.getElementById('confirmar');
+        const confirmarFeedback = confirmarInput.nextElementSibling;
+        confirmarInput.classList.remove('is-invalid');
+        confirmarFeedback.textContent = '';
+        if (confirmarInput.value !== password) {
+          confirmarInput.classList.add('is-invalid');
+          confirmarFeedback.textContent = 'Las contraseñas no coinciden.';
+          valid = false;
+        }
+
+        if (!valid) {
+          e.preventDefault();
+        }
+      });
+    }
   });
   
 </script>
