--- a/index2.html
+++ b/index2.html
@@ -58,14 +58,16 @@
                 <div class="card border">
                     <div class="card-header bg-light fw-bold">Iniciar Sesión</div>
                     <div class="card-body bg-light">
-                        <form>
+                        <form id="loginForm" novalidate>
                             <div class="mb-3">
-                                <label for="nombre" class="form-label">Correo</label>
-                                <input type="text" class="form-control" id="nombre" required>
+                                <label for="correo" class="form-label">Correo</label>
+                                <input type="email" class="form-control" id="correo" maxlength="100" required>
+                                <div class="invalid-feedback" id="correoFeedback"></div>
                             </div>
                             <div class="mb-3">
                                 <label for="password" class="form-label">Contraseña</label>
-                                <input type="password" class="form-control" id="password" required>
+                                <input type="password" class="form-control" id="password" required minlength="4" maxlength="10">
+                                <div class="invalid-feedback" id="passwordFeedback"></div>
                             </div>
                             <div class="d-grid mt-4">
                                 <button type="submit" class="btn btn-dark btn-lg">¡Iniciar Sesión!</button>
@@ -106,18 +108,69 @@
         </div>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-      document.addEventListener('DOMContentLoaded', () => {
-        const cart = JSON.parse(localStorage.getItem('cart')) || [];
-        // Suma la cantidad total de unidades
-        const totalUnits = cart.reduce((sum, item) => sum + item.quantity, 0);
-        const cartCountElement = document.querySelector('.nav-link .bi-cart').nextSibling;
-        if (cartCountElement) {
-          cartCountElement.textContent = ` Cart (${totalUnits})`;
-        }
-      });
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+        <script>
+            document.addEventListener('DOMContentLoaded', () => {
+                const cart = JSON.parse(localStorage.getItem('cart')) || [];
+                // Suma la cantidad total de unidades
+                const totalUnits = cart.reduce((sum, item) => sum + item.quantity, 0);
+                const cartCountElement = document.querySelector('.nav-link .bi-cart').nextSibling;
+                if (cartCountElement) {
+                    cartCountElement.textContent = ` Cart (${totalUnits})`;
+                }
+
+                // Validación de inicio de sesión
+                const loginForm = document.getElementById('loginForm');
+                if (loginForm) {
+                    loginForm.addEventListener('submit', function(e) {
+                        e.preventDefault();
+                        let valid = true;
+
+                        // Correo
+                        const correoInput = document.getElementById('correo');
+                        const correoFeedback = document.getElementById('correoFeedback');
+                        const correo = correoInput.value.trim();
+                        const correoRegex = /^[^@\s]{1,}@((duoc\.cl)|(profesor\.duoc\.cl)|(gmail\.com))$/i;
+                        correoInput.classList.remove('is-invalid');
+                        correoFeedback.textContent = '';
+                        if (!correo) {
+                            correoInput.classList.add('is-invalid');
+                            correoFeedback.textContent = 'El correo es requerido.';
+                            valid = false;
+                        } else if (correo.length > 100) {
+                            correoInput.classList.add('is-invalid');
+                            correoFeedback.textContent = 'El correo no puede exceder los 100 caracteres.';
+                            valid = false;
+                        } else if (!correoRegex.test(correo)) {
+                            correoInput.classList.add('is-invalid');
+                            correoFeedback.textContent = 'Solo se permiten correos @duoc.cl, @profesor.duoc.cl o @gmail.com.';
+                            valid = false;
+                        }
+
+                        // Contraseña
+                        const passwordInput = document.getElementById('password');
+                        const passwordFeedback = document.getElementById('passwordFeedback');
+                        const password = passwordInput.value;
+                        passwordInput.classList.remove('is-invalid');
+                        passwordFeedback.textContent = '';
+                        if (!password) {
+                            passwordInput.classList.add('is-invalid');
+                            passwordFeedback.textContent = 'La contraseña es requerida.';
+                            valid = false;
+                        } else if (password.length < 4 || password.length > 10) {
+                            passwordInput.classList.add('is-invalid');
+                            passwordFeedback.textContent = 'La contraseña debe tener entre 4 y 10 caracteres.';
+                            valid = false;
+                        }
+
+                        if (valid) {
+                            // Aquí iría la lógica de autenticación real
+                            loginForm.submit();
+                        }
+                    });
+                }
+            });
+        </script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 
